tests/src/frontend/syntax/invalid/lvalue_in_call_array.sk
fun main(): String {
  x.!y[1]
}
